# lib-price-predictor

./: .gitignore  App.py  README.md  __init__.py  pyproject.toml  run_experiment.py  setup.py
AIlibrary/: __init__.py
AIlibrary/core/: evaluator.py  model_io.py  model_runner.py  model_tester.py  train.py
AIlibrary/models/: __init__.py  base_model.py  dispatcher.py
AIlibrary/models/catboost/: model.py
AIlibrary/models/lightgbm/: model.py
AIlibrary/models/random_forest/: model.py
AIlibrary/models/xgboost/: __init__.py  model.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: __init__.py
core/: __init__.py  evaluator.py  model_runner.py  preprocessing.py
interface/: __init__.py  predictor.py
models/: dispatcher.py
models/catboost/: __init__.py  model.py
models/lightgbm/: __init__.py  model.py
models/random_forest/: model.py
models/xgboost/: model.py
models_storage/: catboost_model.cbm  catboost_model.txt  lightgbm_model.txt  randomforest_model.joblib  xgboost_model.json
outputs/: metricas_modelos.csv
tests/: test_model_selection.py
vehicle_price_predictor/config/: loader.py
vehicle_price_predictor/core/: model_io.py  model_runner.py  model_tester.py  train.py
vehicle_price_predictor/models/: dispatcher.py
vehicle_price_predictor/models/catboost/: model.py
vehicle_price_predictor/models/lightgbm/: model.py
vehicle_price_predictor/models/random_forest/: __init__.py  model.py
vehicle_price_predictor/models/xgboost/: model.py
