[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-price-predictor"
version = "0.1.0"
description = "Librería interna para predicción de precios de vehículos"
authors = [
    { name = "Fintech Solutions S.A.", email = "dev@fintechsolutions.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "catboost",
    "joblib",
    "pyyaml"
]

[tool.setuptools.packages.find]
include = ["vehicle_price_predictor*"]
